--- a/index.Rmd
+++ b/index.Rmd
@@ -28,10 +28,44 @@ I will use it extensively in this course.
 
 ## Software {-}  
 
-[Vlab](https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVNIRGFrSE1Hd3JCeWhUREdFPS0tZjk4ODFlYWEyZWFiNWQwYWYyZDk0YTZjMjljZTJlMjBkNmIwMzE5Yw.mp4)
+There are at least two way you can access the software needed for this course. 
+You can use the virtual labs on campus.
+I know at least the education virtual labls have R and RStudio installed.
+IF you go this route you can watch the following video.
+Note you will need Duo setup for this to work.
 
+[Using Vlab to acces R/RStudio](https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVNIRGFrSE1Hd3JCeWhUREdFPS0tZjk4ODFlYWEyZWFiNWQwYWYyZDk0YTZjMjljZTJlMjBkNmIwMzE5Yw.mp4)
+
+A better option if you have a laptop, you can install both programs on your computer. 
+They are both absolutely free and available on all major operating systems, so you will not have to worry about transferring information across computers, limited connection speeds, or other hassles inherent with the Vlab route.
+
+The following links take you to videos instructing you how to install them.
 
 [Installing R and RStudio](https://auburn.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=5dacd1fe-b888-407b-a89f-ac150135ace8)
 
-[Organizing projects](https://auburn.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aed0e2a9-004f-453f-80c7-abbe010a063b)
+[Organizing Projects in RStudio](https://auburn.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aed0e2a9-004f-453f-80c7-abbe010a063b)
+
+
+## Resources for Learning R {-}
+
+While such experience is certainly helpful, I do not assume you have prior knowledge of using R.
+I will demonstrate the use of R and provide (particularly in this notebook) the R code needed to use the methods we will learn.
+However, even if you have prior experience with R, you should plan to spend time learning to program in R.
+Some people find this intimidating initially, but most of you will grow to find R programming rewarding, and even fun by the end of the course. 
+But, there will be frustration for sure.
+
+Here are some good places to start learning R:
+
+[CRAN](https://cran.r-project.org/)
+
+
+
+## R Packages {-}
+
+R is, among other paradigms, a functional programming language, which means is heavily utilizes functions. 
+R's functions are stored in packages.
+While base R has a long list of very useful functions, to fully realize the power of R you will have to use additional packages.
+So, learning how to **install** packages (downloading from the web to your computer) and **loading** packages (making the package's functions accessible to your current R session) are important skills to master.
+
+
 
