--- a/01-ClassicTestTheory.Rmd
+++ b/01-ClassicTestTheory.Rmd
@@ -16,27 +16,89 @@ X = T + E
 $$
 where $X$ is the **observed score**, $T$ is the **true score**, which is unknown, and $E$ is the **error**
 
+To demonstrate this let's assume we have the following data,
+
 ```{r}
-
-
+source("code/simulate_CTTdata.R")
+CTTdata
 ```
 
+where `id` is a variable indicating individual test-takers, `time` indicated which of 3 times each individual was assessed, `x1` - `x10` are the scores on 10 items that comprise the test, and `Tau` is the true value of the individuals ability. 
+I use `Tau` here instead of `T`, because `T` is a protected symbol in R which is short-hand for `TRUE`.
+Note that we would not know `Tau` in most situations, but because this is simulated data we will pretend we do.
+
+We can create a composite score for the ten items for each individual on each occasion by averaging columns 3 through 12.
+
+```{r}
+CTTdata$X <- rowMeans(CTTdata[ ,3:12])
+```
+
+And we can also create `E`, the error with:
+
+```{r}
+CTTdata$E <- CTTdata$X - CTTdata$Tau
+```
+Again, in practice we would not be able to directly compute `E` because we would not know `Tau`, but we will use it to build an understanding of what error is.
+
+Now we have:
+
+```{r}
+CTTdata
+```
+Look over the last three columns and make sure you understand their relation. 
+For example, in the first row, note that `X` is .2 points above `Tau`, which is exactly the value of `E` we computed ($X_1 - T_1 = E_1 =  4.2 - 4 = .2$).
+The 1 subscript in the previous expression indicated row 1 (i.e. i = 1).
+
+
+```{r}
+CTTdata$X_t <- round(ave(CTTdata$X, CTTdata$id, FUN = mean),1)
+```
+
+```{r}
+CTTdata
+```
 
 ## Reliability
 
 $$
 \text{reliability} = \frac{\sigma^2_T}{\sigma^2_X} = \frac{\sigma^2_T}{\sigma^2_T + \sigma^2_E} = \rho^2_{XT}
 $$
+```{r}
+Tau <- CTTdata$Tau
+X <- CTTdata$X
+E <- CTTdata$X - CTTdata$Tau
+```
+
+```{r}
+var(Tau)/var(X)
+```
+```{r}
+var(Tau)/(var(Tau) + var(E))
+```
+
+```{r}
+cor(Tau, X)^2
+```
+
+
+```{r}
+plot(x = CTTdata$Tau, y = CTTdata$id, xlim = c(1,10),
+     ylim = c(0,7))
+points(x = CTTdata$X, y = jitter(CTTdata$id), pch = 3, col = "red")
+points(x = ave(x = CTTdata$X, factor(CTTdata$id), FUN = mean), y = CTTdata$id, 
+       col = "blue", pch = 18)
+# points(x = CTTdata$X_t, pch = 2, factor(CTTdata$id))
+```
 
 ### Cronbach's $\alpha$
 
 In the notes for this chapter, I demonstrate aspects of classical test theory, reliability and generalizability theory using data from a study exploring the motivation of R package authors [@mair2015motivation]. 
-This tutorial is based on Chapter 1 of @mair2018modern, which can be consulted for a more indepth exposition of the underlying theory.
+This tutorial is based on Chapter 1 of @mair2018modern, which can be consulted for a more in depth exposition of the underlying theory.
 Here I focus on demonstrating some of those concepts in R, as well as describing how to get certain results in R.
 
 First, I load the packages used in this tutorial:
 
-```{r}
+```{r class.source="bluecode"}
 # Packages used:
 library(psych)
 library(MPsychoR)
@@ -58,7 +120,7 @@ HybMot <- na.omit(HybMot)
 
 This leads to a data set with 777 authors and 19 items.
 
-```{r}
+```{r style="background: blue;"}
 # How many authors(rows) and items(columns)?
 dim(HybMot)
 # Note they are all dichotomous items.
@@ -82,6 +144,87 @@ sigma2_X <- sum(vcmat)
 
 ## Generalizability Theory
 
+Generalizability theory, or G-theory for short, is an extension of CTT, which decomposes the one error term in CTT into multiple sources of error called *facets*. 
+These could include sources such as items, raters, or measurement occasions.
+These were each given a subscript on page 2 of the text.
+
+Before looking at these different sources of error, let's calculate Cronbach's $\alpha$ in a different way, that will allow this decomposition going forward.
+
+We will first need to reshape the data from wide to long format. 
+A great tutorial on reshaping data with the `reshape2` package can be found here:
+
+https://seananderson.ca/2013/10/19/reshape/
+
+Basically, we need to transform the data so that instead of each item being in a separate column are reshaped so there is one column with the cell values, and one column that identifies which item the score is from.
+
+
+
+```{r}
+library("reshape2")
+# Add person variable
+Hyb1 <- data.frame(HybMot, person = 1:nrow(HybMot))
+Hyblong <- melt(Hyb1, id.vars = c("person"), variable.name = "item")
+Hyblong$person <- as.factor(Hyblong$person)
+```
+
+
 ### Reliability and Generalizability
 
+
+```{r}
+summary(aov(value ~ person + item, data = Hyblong))
+```
+
+From this output we can calculate Cronbach's $\alpha$ with the following values:
+
+```{r}
+MSp <- 0.85
+MSe <- 0.15
+
+alpha <- (MSp - MSe)/MSp
+print(alpha, digits = 2)
+```
+
+```{r}
+ICC(HybMot)
+```
+
 ### Multiple Sources of Error
+
+```{r}
+
+
+
+icchyb <- ICC(HybMot)
+sqrt((0.85-0.15)/19)
+sqrt((31.88-0.15)/777)
+
+library("lme4")
+VarCorr(lmer(value ~ (1|person) + (1|item), data = Hyblong))
+
+library("gtheory")
+gfit <- gstudy(data = Hyblong, formula = value ~ (1|person) + (1|item))
+dfit <- dstudy(gfit, colname.objects = "person", colname.scores = "value", 
+               data = Hyblong)
+round(dfit$generalizability, 3)
+
+data("Lakes")
+phydat <- subset(Lakes, subtest == "physical")
+phydat$item <- droplevels(phydat$item)
+head(phydat)
+
+formula <- score ~ (1|personID) + (1|raterID) + (1|item) + 
+  (1|personID:raterID) + (1|personID:item) + (1|raterID:item)
+gfit <- gstudy(formula = formula, data = phydat)
+gfit
+
+dfit <- dstudy(gfit, colname.objects = "personID", colname.scores = "score", 
+               data = phydat)
+dfit$components
+dfit$var.error.abs
+dfit$sem.abs
+dfit$var.error.rel
+dfit$sem.rel
+dfit$dependability
+dfit$generalizability
+```
